<?xml version="1.0"?>
<package format="2">
  <name>ros_dynamic_topic_synchronizer</name>
  <version>1.0.0</version>
  <description>A flexible topic synchronizer for a varible number of topics and a timeout</description>
  <author email="ivo.ivanov@hs-augsburg.de">Ivo Ivanov</author>
  <maintainer email="ivo.ivanov@hs-augsburg.de">Ivo Ivanov</maintainer>

  <license>Apache-2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>roscpp</test_depend>
  <test_depend>rostest</test_depend>
  
</package>
